style.css
/* ... */
iframe#wp-custom-header-video {
	width: 100%;
}

.wp-custom-header-video-button {
	opacity: 0;
	visibility: hidden;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	margin: auto !important;
	width: 62px;
	height: 50px;
	font: 0px/0 a;
	-moz-transition: all 0.5s;
	-o-transition: all 0.5s;
	-webkit-transition: all 0.5s;
	transition: all 0.5s;
}

.wp-custom-header:hover .wp-custom-header-video-button {
	visibility: visible;
	opacity: 1;
}

.wp-custom-header-video-button:before {
	content: '\f04b';
	display: block;
	font-family: FontAwesome;
	font-size: 20px;
}

.wp-custom-header-video-button.wp-custom-header-video-pause:before {
	content: '\f04c';
}

/* =RESPONSIVE STRUCTURE
----------------------------------------------- */
@media screen and (max-width: 1500px) {
	.no-sidebar-full-width .alignwide {
		margin-left: -20px;
		margin-right: -20px;
	}
}

@media screen and (max-width: 1400px) and (min-width: 1200px) {
	.no-sidebar-full-width #primary .entry-content > .alignwide {
		margin-left: -20px;
		margin-right: -20px;
	}
	.no-sidebar #primary .entry-content > .alignwide {
		margin-left: -50px;
		margin-right: -50px;
	}
	.no-sidebar #primary .entry-content > .alignfull {
		margin-left: -100px;
		margin-right: -100px;
	}
}

@media screen and (max-width: 1190px) {
	#page {
		width: 97%;
	}

	.wide #page {
		width: 100%;
	}

	.inner-wrap {
		width: 94%;
	}
}

@media screen and (max-width: 1078px) {

	.no-sidebar-full-width .alignwide {
		margin-left: -10px;
		margin-right: -10px;
	}
}

@media screen and (max-width: 768px) {
	#header-text-nav-wrap {
		padding: 15px 0;
	}

	#header-left-section {
		float: none;
		max-width: 100%;
		margin-right: 0;
	}

	#header-logo-image {
		float: none;
		text-align: center;
		margin-bottom: 10px;
		padding-right: 0;
	}

	#header-text {
		float: none;
		text-align: center;
		padding: 0;
		margin-bottom: 10px;
	}

	#site-description {
		padding-bottom: 5px;
	}

	#header-right-section {
		float: none;
		max-width: 100%;
	}

	#header-right-section .widget {
		padding: 0 0 10px 0;
		float: none;
		text-align: center;
	}

	.no-sidebar-full-width #primary .entry-content > .alignwide,
	.no-sidebar #primary .entry-content > .alignwide {
		margin-left: -15px;
		margin-right: -15px;
	}
	.no-sidebar-full-width.boxed #primary .entry-content > .alignwide,
	.no-sidebar.boxed #primary .entry-content > .alignwide {
		margin-left: 0px;
		margin-right: 0px;
	}
	.no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
	.no-sidebar.boxed #primary .entry-content > .alignfull {
		margin-left: -40px;
		margin-right: -40px;
	}
	.no-sidebar #primary .entry-content > .alignfull {
		margin-left: -15px;
		margin-right: -15px;
	}

	.widget_recent_work .tg-one-fourth {
		width: 50%;
		float: left;
	}

	.footer-socket-wrapper .copyright {
		float: none;
		max-width: 100%;
		text-align: center;
		margin-bottom: 5px;
	}

	.footer-socket-wrapper .footer-menu {
		float: none;
		text-align: center;
	}

	.footer-socket-wrapper .footer-menu li {
		float: none;
		display: inline;
	}

	.footer-socket-wrapper .footer-menu a {
		float: none;
		display: inline;
		padding: 5px 5px 0;
	}
}

@media (min-width: 768px) and (max-width: 1024px) {
	.main-navigation ul li ul {
		top: 103%;
	}

	.main-navigation li.menu-item-has-children a {
		padding: 12px 18px;
	}

	.main-navigation li.menu-item-has-children:hover {
		background: #77cc6d none repeat scroll 0 0;
	}

	.main-navigation ul.menu-main-menu-container ul li:hover > ul.sub-menu {
		display: none;
	}

	.main-navigation li.menu-item-has-children > a::after,
	.main-navigation li.page_item_has_children > a::after {
		display: none;
	}

	.sub-toggle,
	.sub-menu .sub-toggle {
		cursor: pointer;
		display: block;
		position: absolute;
		right: 5px;
		top: 50%;
		background: none;
		border-color: #ffbb31;
		-webkit-transform: translateY(-50%) rotate(0deg);
		-moz-transform: translateY(-50%) rotate(0deg);
		-ms-transform: translateY(-50%) rotate(0deg);
		-o-transform: translateY(-50%) rotate(0deg);
		transform: translateY(-50%) rotate(0deg);
	}

	.main-navigation ul li.current-menu-ancestor .sub-toggle,
	.main-navigation li.menu-item-has-children:hover .sub-toggle {
		color: #fff;
	}

	.main-navigation ul li.current-menu-ancestor .sub-menu li .sub-toggle {
		color: #333;
	}

	.sub-toggle.active {
		-webkit-transform: translateY(-50%) rotate(0deg);
		-moz-transform: translateY(-50%) rotate(0deg);
		-ms-transform: translateY(-50%) rotate(0deg);
		-o-transform: translateY(-50%) rotate(0deg);
		transform: translateY(-50%) rotate(0deg);
	}

	.main-navigation .sub-menu {
		display: none;
	}

	.sub-menu .sub-toggle {
		top: 50%;
		-webkit-transform: translatey(-50%) rotate(270deg);
		-ms-transform: translatey(-50%) rotate(270deg);
		-o-transform: translatey(-50%) rotate(270deg);
		transform: translatey(-50%) rotate(270deg);
		right: 10px;
		color: #333;
	}

	.main-navigation li .sub-menu li.menu-item-has-children:hover .sub-toggle {
		color: #fff;
	}

	.sub-menu .sub-toggle.active {
		-webkit-transform: translatey(-50%) rotate(270deg);
		-ms-transform: translatey(-50%) rotate(270deg);
		-o-transform: translatey(-50%) rotate(270deg);
		transform: translatey(-50%) rotate(270deg);
		right: 10px;
		color: #333;
	}

	.main-navigation ul.sub-menu li {
		padding-right: 0;
	}

	.main-navigation ul.sub-menu,
	.main-navigation ul li:hover > ul.sub-menu {
		display: none;
		opacity: 1;
		-webkit-transition: none 0s ease 0s;
		-moz-transition: none 0s ease 0s;
		-ms-transition: none 0s ease 0s;
		-o-transition: none 0s ease 0s;
		transition: none 0s ease 0s;
		visibility: visible;
	}
}
/* ... */

